# xkeen-subscription-watcher

./: .coveragerc.toml  .gitignore  README.md  go.mod  install.sh  main.go  main_test.go  outbound.go  proxy.go  pyproject.toml  subscription.go  tox.ini
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
src/xkeen_subscription_watcher/: main.py
tests/: test_main.py
